package com.example.Spring_Boot_Jpa_ER._06_1_to_1_unidir_spk_mapsid.entity;

import jakarta.persistence.*;
import lombok.*;

@NoArgsConstructor
@AllArgsConstructor
@Setter
@Getter
@Builder
@Entity(name = "domiciles")
public class Domicile {
    @Id
    // GenerationType.IDENTITY relies on IdentityGenerator,
    // which expects values generated by the identity column in the database.
    // These values are automatically incremented.
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id")
    private Long id;
    @Column(name = "city")
    private String city;
    @Column(name = "street")
    private String street;
    @Column(name = "building")
    private String building;
    @Column(name = "apartment")
    private String apartment;
}
